# jlock-encryption-fuzzing

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  PKGBUILD  README.md
.devcontainer/: devcontainer.json
.github/workflows/: release.yml
fuzz-tests/: CMakeLists.txt  fuzz_encrypt_decrypt.cpp
src/: config.h  libchecksum.c  libchecksum.h  libcrypt.c  libcrypt.h  libutils.c  libutils.h  main.c
